--- a/trunk/SeleniumHelper/SeleniumHelper.csproj
+++ b/trunk/SeleniumHelper/SeleniumHelper.csproj
@@ -51,7 +51,7 @@
     <Compile Include="SeleniumExtensions.cs" />
   </ItemGroup>
   <ItemGroup>
-    <Content Include="GNU General Public License.txt" />
+    <Content Include="Apache License, Version 2.0.txt" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
